--- a/package.json
+++ b/package.json
@@ -13,8 +13,5 @@
   "bugs": {
     "url": "https://github.com/CodeYourFuture/JavaScript-Core-2-Classwork-Week4-London8/issues"
   },
-  "homepage": "https://github.com/CodeYourFuture/JavaScript-Core-2-Classwork-Week4-London8#readme",
-  "devDependencies": {
-    "jest": "^26.6.3"
-  }
+  "homepage": "https://github.com/CodeYourFuture/JavaScript-Core-2-Classwork-Week4-London8#readme"
 }
